--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="type_dur">#EE9F50</color>
     <color name="type_reserve">#C5A050</color>
     <color name="type_event">#BCBAC5</color>
+    <color name="type_atk">#DC827F</color>
 
 </resources>
